# media-knowledge-workbench

./: .gitignore  README.md  docker-compose.yml  step-report.md
.github/workflows/: ci.yml
backend/: .coverage  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/v1/: auth.py  chat.py  files.py  timestamps.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  chat_conversation.py  chat_message.py  chat_source.py  document_chunk.py  extracted_document.py  file_summary.py  transcript_segment.py  uploaded_file.py  user.py
backend/app/schemas/: auth.py  chat.py  file.py  timestamp.py
backend/app/services/: auth.py  chatbot.py  embeddings.py  pdf_extractor.py  redis_store.py  retrieval.py  summarizer.py  timestamps.py  transcription.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_auth_api.py  test_chat_api.py  test_config.py  test_db_base.py  test_db_session.py  test_files_api.py  test_health.py  test_main.py  test_processing_api.py  test_rate_limit_cache.py  test_retrieval.py  test_semantic_search.py  test_services.py  test_stream_chat_api.py  test_timestamps_api.py
backend/tests/tmp/: debug.db  test.db
docs/: README.md  final-coverage-evidence.md  final-project-summary.md  requirements-traceability.md  walkthrough-script.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: AppLayout.jsx  (+7 more)
infra/: README.md
(+2 files in other folders)
